latihan5/index.html

--- a/latihan5/ayamgorengsasandokhasnusatenggaratimur.html
+++ b/latihan5/ayamgorengsasandokhasnusatenggaratimur.html
@@ -2,24 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>ayam goreng sasando khas nusa tenggara timur</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Ayam Goreng Sasando Khas Nusa Tenggara Timur</h1>
-    <nav class="navigasi">
-      <ul>
-    <li><a href = "rawonsurabaya.html">Back</a></li>
-    <li><a href = "ayamlodhokhastulungagung.html">Next</a></li>
-    <li><a href="#utama">Bahan Utama</a></li>
-    <li><a href="#ungkep">Bahan Ungkep</a></li>
-    <li><a href="#saus">Bahan Saus</a></li>
-    <li><a href="#cara">Cara Membuat</a></li>
-    <li><a href ="index.html"> Kembali ke halaman utama</a></li>
-  </ul>
-</nav>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">Ayam Goreng Sasando Khas Nusa Tenggara Timur</h1>
     <img class="blockmenu"src="img/ayamsasando.jpg" alt="ayamsasando" class="gambar-resep">
     <p>Ada banyak sekali varian olahan ayam goreng, salah satunya adalah ayam goreng sasando yang berasal dari Nusa Tenggara Timur. Hal yang membedakan ayam goreng sasando dengan ayam goreng lainnya adalah bumbu sambalnya. Penasaran kan?</p>
     <p>Bosan dengan <a href= "bahan/ayamgoreng.html"class="link">Ayam Goreng</a> yang itu2 saja??!! Tak ada salahnya anda mencoba
@@ -28,17 +38,22 @@
     <p>Disantap bersama nasi panas dan lalapan segar sambil mencocol sausnya yang lezat hhmmmm...Ditanggung rasanya cukup menggoda!!
       Selain itu bikinnya juga gampang dan semua bahan2 mudah didapat di sekitar kita. Anda penasaran?? Kalau Iya..silahkan mencoba dan
        semoga sukses. </p>
-
-
-<section id="utama">
-<h2>Bahan :</h2>
+<ul class="collapsible">
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
+  <ol>
 <li> 1/2 ekor ayam, potong sesuai selera</li>
 <li> 1 sdt air jeruk nipis</li>
 <li> 1/2 sdt garam</li>
-</section>
+</ol>
+</div>
+</li>
 
-<section id="ungkep">
-<h3>Bahan ungkep:</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Ungkep</div>
+<div class="collapsible-body">
+  <ol>
 <li> 3 siung bawang putih</li>
 <li> 1 cm kunyit</li>
 <li> 1 cm jahe</li>
@@ -46,10 +61,14 @@
 <li> 1/2 sdt garam</li>
 <li> 1/4 sdt gula pasir (bisa diskip)</li>
 <li> 1/8 sdt bumbu penyedap masakan (bisa diskip)</li>
-</section>
+</ol>
+</div>
+</li>
 
-<section id="saus">
-<h3>Bahan saus:</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Saus</div>
+<div class="collapsible-body">
+  <ol>
 <li> 10 buah cabe merah</li>
 <li> 5 buah cabe rawit</li>
 <li> 1 cm kunyit, dihaluskan</li>
@@ -57,11 +76,15 @@
 <li> 1 cm lengkoas, digeprek</li>
 <li> 1 sdt gula merah iris</li>
 <li> 1 sdm santan kental</li>
-<li> Secukupnya minyak untuk menggoreng ayam
-</section>
+<li> Secukupnya minyak untuk menggoreng ayam</li>
+</ol>
+</div>
+</li>
 
-<section id="cara">
-<h3>Cara memasak :</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
+  <ol>
 <li> Balur ayam dengan air jeruk nipis dan garam, diamkan 10 menit lalu cuci bersih.</li>
 <li> Haluskan bumbu ungkep, lalu ungkep ayam dengan bumbu ungkep dan tambahkan dengan 400 ml air.</li>
 <li> Masak sampai airnya agak kering, matikan api</li>
@@ -70,12 +93,23 @@
 <li> Panaskan 3 sdm minyak, lalu masukkan bumbu saus yang sudah dihaluskan, aduk sebentar lalu masukkan santan, lengkoas dan gula merah iris.</li>
 <li> Masak terus sambil diaduk sampai airnya menyusut, matikan api</li>
 <li> Sajikan.</li>
-</section>
-<nav class="navigasi">
-  <ul>
-  <li><a href="#top">Kembali Ke Atas</a></li>
+</ol>
+</div>
+</li>
 </ul>
+</div>
+
+<nav class="bluechef">
+<div class="nav-wrapper container" role="navigation">
+  <a href="index.html">&lt;&lt;Kembali ke halaman utama</a>
+  <a href = "rawonsurabaya.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href = "ayamlodhokhastulungagung.html">Next&gt;&gt;</a>
+</div>
 </nav>
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
