--- a/latihan5/bahan/soto.html
+++ b/latihan5/bahan/soto.html
@@ -2,18 +2,33 @@
 <html lang="en" dir="ltr">
   <head id="bg">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="../css/style.css" media="screen,projection">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial scale= 1.0"/>
     <title>Soto</title>
-    <link rel="stylesheet" href="../css/style.css">
   </head>
-  <body class="blue-gradient">
-    <nav class="navigasi">
-      <ul>
-        <li><a href="../index.html" >Home</a></li>
-        <li><a href="../sotopadang.html" >Back</a></li>
+  <body>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="../index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+      <li><a href="../index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
       </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
     </nav>
-    <h1 class="heading gradient">Soto</h1>
-    <hr>
+
+    <div class="container">
+    <h1 class="red-text">Soto</h1>
     <img class="blockmenu" src="../img/sotobahan.jpg" alt="sotobahan" class="gambar-resep">
     <p> Soto, sroto, sauto, tauto, atau coto adalah makanan khas
       Indonesia seperti sop yang terbuat dari kaldu daging dan sayuran.
@@ -28,5 +43,10 @@
           isinya, misalnya soto ayam, soto babat, atau soto kambing.
           Ada pula soto yang dibuat dari daging kaki sapi yang disebut
            dengan soto sekengkel.</p>
+         </div>
+
+         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+         <script type="text/javascript" src="js/materialize.min.js"></script>
+         <script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
