--- a/latihan5/index.html
+++ b/latihan5/index.html
@@ -10,7 +10,7 @@ rel="stylesheet">
     <title>Resep</title>
   </head>
   <body>
-<nav class="purplechef" role="navigation">
+<nav class="bluechef" role="navigation">
   <div class="nav-wrapper container">
     <a href="#" class="brand-logo">MASTER CHEF</a>
     <ul class="right hide-on-med-and-down">
@@ -28,13 +28,13 @@ rel="stylesheet">
 </nav>
 
 <div class="container">
-  <h4 class="bluechef-text">Koleksi Resep 10 Kuliner Tradisional</h4>
+  <h4 class="blue-text">Koleksi Resep 10 Kuliner Tradisional</h4>
 
   <div class="row">
     <div class="col m5 s12">
     <div class="card z-depth-3">
       <div class="card-image">
-        <img class="responsive-img" src="img/all.jpg">
+        <img class="responsive-img" src="img/all.jpg" alt="">
       </div>
 </div>
 </div>
