--- a/latihan5/papedatelorayam.html
+++ b/latihan5/papedatelorayam.html
@@ -2,27 +2,40 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport content=width=device-width initial scale=1.0"/>
     <title>Papeda telor ayam</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Papeda telor ayam</h1>
-    <nav class="navigasi">
-      <ul>
-    <li><a href = "nasibakeporkalimantantimur.html">Back</a></li>
-    <li><a href = "seblakbandung.html">Next</a></li>
-    <li><a href="#utama">Bahan Utama</a></li>
-    <li><a href="#cara">Cara Membuat</a></li>
-    <li><a href = "index.html">Kembali ke halaman utama</a></li>
-  </ul>
-</nav>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">Master Chef</a>
+        <ul class="right hide-on-med-and-down">
+          <lli><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+            <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+          </ul>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+            class="material-icons">menu</i></a>
+          </div>
+        </nav>
+
+<div class="container">
+    <h1 class="red-text">Papeda telor ayam</h1>
     <img class="blockmenu"src="img/papeda.jpg" alt="papeda" class="gambar-resep">
     <p>Papeda <a href ="bahan/telur.html">telor</a> <a href="bahan/ayam.html">ayam</a> Kapurung (Papeda) Makanan khas Papua ini berbahan dasar telur ayam.</p> <p> Ya masyarakat Papua sering menambahkan rempah khas Papua pada olahan ayam pedasnya ini. Sebetulnya tidak harus memakai bumbu balado, kamu bisa ganti Cara Membuat Papeda Telur.</p>
 <p>Cara Membuat Papeda? Apa yang muncul dalam benak Anda jika mendengar kata Papeda? Apakah bubur dari sagu, dengan kuah kari? Kamu bisa membuat Papeda telor ayam using 8 Bahan-bahan dan 6 cara membuat. begini cara menyajikan.</p>
-<section id="utama">
-  <br><h2>Bahan :</h2>
+<ul class="collapsible">
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
 <ol>
 <li> 1 butir telor ayam.</li>
 <li> kaldu bubuk dan garam.</li>
@@ -33,10 +46,12 @@
 <li> 5 sendok sayur air.</li>
 <li> bubuk boncabe jika suka/bisa skip .</li>
 </ol>
-</section>
+</div>
+</li>
 
-<section id="cara">
-<h3>Cara memasak :</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Kocok lepas telor dengan sedikit garam dan lada bubuk</li>
 <li> Campur tepung, air dan garam, aduk-aduk bila terlalu kental bisa ditambah air lagi.</li>
@@ -45,12 +60,22 @@
 <li> Tambahkan 1 sendok sayur adonan tepung, jika sudah agak mengering taburkan kaldu bubuk & cabe bubuk, langsung gulung dengan tusukan sate.</li>
 <li> Ulangi sampai adonan habis. Siap dihidangkan dengan cocolan saus atau mayonaise.</li>
 </ol>
-</section>
+</div>
+</li>
+</ul>
+</div>
 
-<nav class="navigasi">
-  <ul>
-    <li><a href="#top">Kembali Ke Atas</a></li>
-  </ul>
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href="index.html">&lt;&lt;Kembali Ke Halaman Utama</a>
+    <a href = "nasibakeporkalimantantimur.html">&lt;Back</a>
+    <a href="#top">|Kembali Ke Atas|</a>
+    <a href = "seblakbandung.html">Next&gt;&gt;</a>
+  </div>
 </nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
