--- a/latihan5/bahan/ayam.html
+++ b/latihan5/bahan/ayam.html
@@ -2,27 +2,45 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="../css/style.css " media="screen,projection">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial scale= 1.0"/>
     <title>Ayam</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css ">
   </head>
-  <body class="blue-gradient">
-    <nav class="navigasi">
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-      </ul>
-    </nav>
-    <h1 class="heading gradient">Ayam</h1>
-    <hr>
-    <img class="blockmenu" src="../img/bagianayam.jpg" alt="bagianayam" class="gambar-resep">
+  <body>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="../index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
+        <ul id="nav-mobile" class="sidenav">
+      <li><a href="../index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+<h1 class="red-text">Ayam</h1>
 <p> Ayam adalah hewan aves atau unggas yang bernafas dengan paru-paru,
 memiliki paruh dan memiliki 2 kaki yang fungsinya untuk menggaruk tanah
 agar bisa mencari makan. Ayam merupakan jenis burung yang akan dimanfaatkan
 daging, telur, dan bulunya. Pada umunya hewan ini termasuk bagian dari rasa
 atau ordo gallifermos dan anserifornes, biasanya hewan ini sering dijadikan
 hewan ternak atau hewan peliharaan.</p>
+<img class="blockmenu" src="../img/bagianayam.jpg" alt="bagianayam" class="gambar-resep">
+</div>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
 
   </body>
 </html>
