--- a/latihan5/bahan/dagingsapi.html
+++ b/latihan5/bahan/dagingsapi.html
@@ -2,18 +2,33 @@
 <html lang="en" dir="ltr">
   <head id="bg">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="../css/style.css" media="screen,projection">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial scale= 1.0"/>
     <title>daging sapi</title>
-    <link rel="stylesheet" href="../css/style.css">
   </head>
-  <body class="blue-gradient">
-    <nav class="navigasi">
-      <ul>
-        <li><a href="../index.html">Home</a></li>
+  <body>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="../index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+      <li><a href="../index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
       </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
     </nav>
-    <h1 class="heading gradient"> Daging Sapi</h1>
-    <hr>
-    <img class="blockmenu" src="../img/dagingsapi.png" alt="dagingsapi" class="gambar-resep">
+
+    <div class="container">
+    <h1 class="red-text"> Daging Sapi</h1>
   <p>Daging sapi (bahasa Inggris: beef)
     adalah daging yang diperoleh dari sapi yang biasa dan umum
     digunakan untuk keperluan konsumsi makanan. Di setiap daerah,
@@ -23,5 +38,11 @@
       sapi ini sangat banyak diperdagangkan. Akan tetapi seperti di Indonesia
        dan di berbagai negara Asia lainnya daging ini banyak digunakan untuk
        makanan berbumbu dan bersantan seperti sup konro dan rendang.</p>
+       <img class="blockmenu" src="../img/dagingsapi.png" alt="dagingsapi" class="gambar-resep">
+     </div>
+
+     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+     <script type="text/javascript" src="js/materialize.min.js"></script>
+     <script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
