--- a/latihan5/bahan/ikanasin.html
+++ b/latihan5/bahan/ikanasin.html
@@ -2,18 +2,33 @@
 <html lang="en" dir="ltr">
   <head id='bg'>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="../css/style.css" media="screen,projection">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial scale= 1.0"/>
     <title> Ikan Asin</title>
-    <link rel="stylesheet" href="../css/style.css">
   </head>
-  <body class="blue-gradient">
-    <nav class="navigasi">
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../nasibakeporkalimantantimur.html" >Back</a></li>
+  <body">
+  <nav class="bluechef" role="navigation">
+    <div class="nav-wrapper container">
+      <a href="#" class="brand-logo">MASTER CHEF</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="../index.html">Beranda</a></li>
+        <li><a href="tujuanweb.html">Tentang Website</a></li>
+        <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
       </ul>
-    </nav>
-    <h1 class="heading gradient">Ikan Asin</h1>
-    <hr>
+
+      <ul id="nav-mobile" class="sidenav">
+    <li><a href="../index.html">Beranda</a></li>
+    <li><a href="tujuanweb.html">Tentang Website</a></li>
+    <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+    </ul>
+    <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  </div>
+  </nav>
+
+  <div class="container">
+    <h1 class="red-text">Ikan Asin</h1>
     <img class="blockmenu"src="../img/ikanasin.jpg" alt="ikanasin" class="gambar-resep">
   <p>Ikan asin adalah bahan makanan yang terbuat dari daging ikan yang diawetkan
     dengan menambahkan banyak garam. Dengan metode pengawetan ini daging ikan
@@ -22,6 +37,11 @@
     Selain itu daging ikan yang diasinkan akan bertahan lebih lama dan
      terhindar dari kerusakan fisik akibat infestasi serangga,
     ulat lalat dan beberapa jasad renik perusak lainnya.</p>
+  </div>
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/init.js"></script>
 
   </body>
 </html>
