--- a/latihan5/biodata.html
+++ b/latihan5/biodata.html
@@ -1,49 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<nav class="navigasi">
-  <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="tujuanweb.html">Informasi Tentang Web</a></li>
-</ul>
-</nav>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <title>BIODATA</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport" content="width=device-width, initial scale=1.0"/>
   </head >
   <body>
-    <div class="all">
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
     <h1>BIODATA</h1>
-  </div>
-
-<article class="card">
-    <img class="blockmenu" src="img/img1.jpeg" height= "300px">
-
+    <img src="img/img1.jpeg" height= "300px">
       <table>
         <tr>
-    <td> Nama : </td>
-    <td>Faustine Wijaya</td>
+    <td> Nama : Faustine Wijaya</td>
   </tr>
   <tr>
-    <td> Umur : </td>
-    <td>19 Tahun </td>
+    <td> Umur : 19 Tahun </td>
   </tr>
   <tr>
-    <td> Universitas : </td>
-    <td>Stmik Kharisma</td>
+    <td> Universitas : Stmik Kharisma</td>
   </tr>
   <tr>
-    <td>Jurusan : </td>
-    <td> Sistem Informasi</td>
+    <td>Jurusan : Sistem Informasi</td>
   </tr>
   <tr>
-    <td>Instagram : </td>
-    <td> fw0201</td>
+    <td>Instagram : fw0201</td>
   </tr>
 </table>
+</div>
 
-</article>
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href="index.html">HOME</a>
+  </div>
+</nav>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
