--- a/latihan5/nasibakeporkalimantantimur.html
+++ b/latihan5/nasibakeporkalimantantimur.html
@@ -2,24 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport" content="width=device-width initial scale=1.0"/>
     <title>Nasi bakepor Kalimantan Timur</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-<h1>Nasi bakepor Kalimantan Timur</h1>
-<nav class="navigasi">
-  <ul>
-<li><a href = "ayamlodhokhastulungagung.html">Back</a></li>
-<li><a href="papedatelorayam.html">Next</a></li>
-<li><a href="#utama">Bahan Utama</a></li>
-<li><a href="#sambal">Bahan Sambal</a></li>
-<li><a href="#bumbu">Bumbu</a></li>
-<li><a href="#cara">Cara Membuat</a></li>
-<li><a href = "index.html">Kembali ke halaman utama</a></li>
-</ul>
-</nav>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+<h1 class="red-text">Nasi bakepor Kalimantan Timur</h1>
 <img class="blockmenu"src="img/nasibakepor.jpg" alt="nasibakepor" class="gambar-resep">
 <p>Nasi Bekepor khas Kutai Kartanegara merupakan nasi yang dicampur dengan <a href="bahan/ikanasin.html">ikan asin</a>, rempah-rempah, dan minyak sayur.
 Nasi Bekepor biasanya disajikan bersama dengan sayur gangan asam kukar yang merupakan sejenis sayur asem yang diolah bersama dengan kepala ikan dan ubi manis. </p>
@@ -35,8 +45,10 @@ Ketika diputar, dibacakan shalawat sebanyak tiga kali dan disebutkan nama seseor
 
 Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya untuk datang menemui.</p>
 
-<section id="utama">
-<br><h2>Bahan:</h2>
+<ul class="collapsible">
+  <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
 <ol>
 <li>300 gr beras putih, cuci bersih</li>
 <li> 2 lembar daun salam</li>
@@ -49,19 +61,23 @@ Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya u
 <li> 3 buah cabe rawit, iris bulat tipis</li>
 <li> 1/2 buah jeruk nipis, ambil airnya</li>
 </ol>
-</section>
+</div>
+</li>
 
-<section id="sambal">
-<h3>Sambal Raja :</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Sambal Raja</div>
+<div class="collapsible-body">
 <ol>
 <li> 1 buah terong, potong dadu 1 cm</li>
 <li> 10 lonjor kacang panjang, potong 2 cm</li>
 <li> 10 siung bawang merah, belah 4</li>
 </ol>
-</section>
+</div>
+</li>
 
-<section id="bumbu">
-<h3>Bumbu halus :</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Bumbu Halus</div>
+<div class="collapsible-body">
 <ol>
 <li> 10 buah cabe rawit</li>
 <li> 10 buah cabe merah besar, buang biji</li>
@@ -70,10 +86,12 @@ Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya u
 <li> 1 sdt garam</li>
 <li> 1 sdm gula pasir</li>
 </ol>
-</section>
+</div>
+</li>
 
-<section id="cara">
-<h3>Cara memasak :</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Goreng ikan asin gabus. Angkat. Tiriskan. Suwir - suwir. Sisihkan</li>
 <li> Nasi Bakepor : Siapkan panci tebal. Masukkan ke dalamnya beras, air, minyak, daun salam, daun pandan, dan garam.</li>
@@ -88,12 +106,22 @@ Dan konon katanya, cara ini selalu berhasil membuat orang yang disebut namanya u
 <li> Sambal Raja siap di dampingkan dengan nasi bakepor</li>
 <li> Penyajian : Hidangkan Nasi Bakepor hangat hangat dengan sambal Raja</li>
 </ol>
-</section>
+</div>
+</li>
+</ul>
+</div>
 
-<nav class="navigasi">
-  <ul>
-    <li><a href="#top">Kembali Ke Atas</a></li>
-  </ul>
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href="index.html">&lt;&lt;Kembali Ke Halaman Utama</a>
+    <a href = "ayamlodhokhastulungagung.html">&lt;Back</a>
+    <a href="#top"> |Kembali Ke Atas|</a>
+    <a href="papedatelorayam.html">Next&gt;&gt;</a>
+  </div>
 </nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
