--- a/latihan5/rawonsurabaya.html
+++ b/latihan5/rawonsurabaya.html
@@ -2,30 +2,41 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport" content="width=device-width initial scale= 1.0"/>
     <title>Rawon Surabaya</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Rawon Surabaya</h1>
-    <nav class="navigasi">
-      <ul>
-    <li><a href = "sopkonro.html">Back</a></li>
-    <li><a href="ayamgorengsasandokhasnusatenggaratimur.html">Next</a></li>
-    <li><a href="#utama">Bahan Utama</a></li>
-    <li><a href="#pelengkap">Bahan Pelengkap</a></li>
-    <li><a href="#cara">Cara Membuat</a></li>
-    <li><a href = "index.html">Kembali ke halaman utama</a></li>
-  </ul>
-</nav>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">Rawon Surabaya</h1>
     <img class="blockmenu"src="img/rawon.jpg" alt="rawon" class="gambar-resep">
     <p>Resep rawon daging sapi bisa kamu terapkan sebagai sajian Idul Adha. Rawon merupakan hidangan berkuah seperti sup yang berisi potongan lembut daging serta aroma dan warna hitam khas dari buah keluak. Rawon merupakan makanan khas dari Jawa Timur. Rasanya yang begitu menggugah selera membuatnya digemari banyak orang. Bahkan tidak hanya orang Surabaya atau Jawa Timur saja yang gemar menyantapnya, orang-orang dari luar Pulau Jawa, bahkan orang asing dari luar negeri pun menyukainya.</p>
 <p>Resep rawon <a href="bahan/dagingsapi.html">daging sapi</a> yang enak juga cukup mudah dibuat. Kamu bisa menjadikan daging sapi kurban menjadi santapan yang lezat ini. Idealnya rawon dibuat dari daging sandung lamur atau di dunia kuliner dikenal dengan brisket, yang sedikit berlemak dan enak dimasak lama. Namun, kamu juga bisa menggunakan bagian-bagian lainnya sesuai selera.</p>
-
-
-<section id="utama">
-  <h2>Bahan:</h2>
+<ul class="collapsible">
+  <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
     <ol>
 <li>500 gram daging sapi, bagian sandung lumur</li>
 <li>Air untuk merebus daging</li>
@@ -48,32 +59,45 @@
 <li>2 mata asam jawa, larutkan dengan 1 sdm air</li>
 <li>5 lembar daun jeruk purut</li>
 </ol>
-</section>
+</div>
+</li>
 
-<section id="pelengkap">
-<h3>Pelengkap:</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Pelengkap</div>
+<div class="collapsible-body">
 <ol>
 <li>Tauge pendek/kecambah</li>
 <li>Telur bebek asin</li>
 <li>Sambal terasi</li>
 <li>Kerupuk ikan</li>
 </ol>
-</section>
+</div>
+</li>
 
-<section id="cara">
-<h3>Cara memasak :</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li>Cuci daging sampai bersih, rebus sampai matang. Angkat dan tiriskan daging, lalu potong ukuran dadu. Sisihkan daging dan air kaldunya.</li>
 <li>Panaskan minyak, tumis bumbu halus sampai harum dan matang. Masukkan daging, serai, daun jeruk, air asam, dan garam. Aduk sampai rata dan beraroma.</li>
 <li>Pukul-pukul daging sampai melebar. Goreng dalam minyak panas sebentar, angkat. Taburi dengan bawang goreng</li>
 </ol>
-</section>
-
-<nav class="navigasi">
-  <ul>
-  <li><a href="#top">Kembali Ke Atas</a></li>
+</div>
+</li>
 </ul>
+</div>
+
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href="index.html">&lt;&lt;Kembali Ke Halaman Utama</a>
+  <a href = "sopkonro.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href="ayamgorengsasandokhasnusatenggaratimur.html">Next&gt;&gt;</a>
+</div>
 </nav>
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
