--- a/latihan5/satelilitayamkhasbali.html
+++ b/latihan5/satelilitayamkhasbali.html
@@ -2,30 +2,43 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport content=width=device-width initial scale= 1.0"/>
     <title>Sate lilit ayam khas Bali</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-<h1>Sate lilit ayam khas Bali</h1>
-<nav class="navigasi">
-  <ul>
-<li><a href = "seblakbandung.html">Back</a></li>
-<li><a href = "pallubasa.html">Next</a></li>
-<li><a href="#utama">Bahan Utama</a></li>
-<li><a href="#cara">Cara Membuat</a></li>
-<li><a href = "index.html">Kembali ke halaman utama</a></li>
-</ul>
-</nav>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+<h1 class="red-text">Sate lilit ayam khas Bali</h1>
 <img class="blockmenu"src="img/sate.jpg" alt="sate" class="gambar-resep">
 <p> <a href="bahan/ayam.html">Ayam</a> merupakan salah satu bahan masakan yang bisa diolah menjadi berbagai masakan lezat dan menggugah selera.
   Bisa dibuat ayam goreng, ayam kuah, ayam suwir atau sate ayam. Oh iya, kalau ngomongin sate ayam, kali ini Vemale punya resep sate ayam yang lezat dan enaknya kebangetan. </p>
   <p>Sate ayam ini merupakan sate lilit ayam khas Bali. Nggak hanya sangat enak, dipastikan sate lilit ini juga sehat dan lezat banget.
 Untuk membuat sate lilit ayam khas Bali sendiri sangat mudah kok. Mau tahu seperti apa resepnya? Berikut resepnya. </p>
-
-<section id="utama">
-<br><h2>Bahan :</h2>
+<ul class="collapsible">
+  <li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+<div class="collapsible-body">
 <ol>
 <li> 300 gr daging ayam (giling).</li>
 <li> 100 gr kelapa parut.</li>
@@ -43,10 +56,12 @@ Untuk membuat sate lilit ayam khas Bali sendiri sangat mudah kok. Mau tahu seper
 <li> secukupnya garam & merica.</li>
 <li> 20 batang bambu atau serai.</li>
 </ol>
-</section>
+</div>
+</li>
 
-<section id="cara">
-<h3>Cara memasak :</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Haluskan bawang merah,bawang putih, kunyit, cabai, kemiri, jahe, kencur, lengkuas dan terasi</li>
 <li> Campurkan ayam giling,telur,tapioka,dan kelapa. Beri garam dan merica secukupnya.</li>
@@ -55,12 +70,22 @@ Untuk membuat sate lilit ayam khas Bali sendiri sangat mudah kok. Mau tahu seper
 <li> Jika rasa sudah pas. Ambil adonan secukupnya dan lilitkan pada batang Bambu atau Batang serai. Lalu panggang di Grill Pan hingga matang.</li>
 <li> Untuk Sambal matah : iris bawang merah,daun jeruk,cabai,dan batang serai bagian putihnya saja. Beri sejumput garam. panaskan 2 sdm minyak masukkan terasi. goreng hingga terasi hancur bercampur minyak. lalu campurkan pada bahan irisan. Aduk rata, siap dihidangkan.</li>
 </ol>
-</section>
-
-<nav class="navigasi">
-  <ul>
-  <li><a href="#top">Kembali Ke Atas</a></li>
+</div>
+</li>
 </ul>
+</div>
+
+<nav class="bluechef">
+<div class="nav-wrapper container" role="navigation">
+  <a href = "index.html">&lt;&lt;Kembali ke halaman utama</a>
+  <a href = "seblakbandung.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href = "pallubasa.html">Next&gt;&gt;</a>
+</div>
 </nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
