--- a/latihan5/seblakbandung.html
+++ b/latihan5/seblakbandung.html
@@ -2,23 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport" content="width=device-width intial scale= 1.0"/>
     <title>Seblak Bandung</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Seblak Bandung</h1>
-    <nav class="navigasi">
-      <ul>
-  <li><a href = "papedatelorayam.html">Back</a></li>
-  <li><a href = "satelilitayamkhasbali.html">Next</a></li>
-  <li><a href="#utama">Bahan Utama</a></li>
-  <li><a href="#bumbu">Bumbu</a></li>
-  <li><a href="#cara">Cara Membuat</a></li>
-  <li><a href = "index.html">Kembali ke halaman utama</a></li>
-</ul>
-</nav>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">Seblak Bandung</h1>
     <img class="blockmenu"src="img/seblak.jpg" alt="seblak" class="gambar-resep">
     <p>Siapa sih yang ga tau Seblak? Sekarang, Seblak ini sudah menjadi makanan hits kekinian yang digemari oleh banyak orang selain Bakso Aci
       dan <a href="bahan/ayam.html">Ayam</a> Geprek Mozarella.
@@ -29,17 +40,20 @@
         <p> Tak heran jika banyak yang mengenalnya sebagai Seblak Bandung.
          Penasaran dengan seblak Bandung seperti apa dan juga resep
           Seblak Bandung? Yuk simak ulasannya berikut ini! </p>
-
-    <section id="utama">
-    <br><h2>Bahan:</h2>
+<ul class="collapsible">
+  <li>
+    <div class="collapsible-header"><i class="material-icons">search</i>Bahan Utama</div>
+    <div class="collapsible-body">
 <ol>
 <li> 2 genggam kerupuk (redam di air biasa 2 jam).</li>
 <li> 200 g ceker.</li>
 </ol>
-</section>
+</div>
+</li>
 
-<secton id="bumbu">
-<h3>Bumbu halus:</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Bahan Bumbu Halus</div>
+<div class="collapsible-body">
 <ol>
 <li> 4 siung bawang merah.</li>
 <li> 3 siung bawang putih.</li>
@@ -54,22 +68,34 @@
 <li> Air kaldubrebusan ceker (sesuai selera).</li>
 <li> 2 butir telur yang sudah di orak arik.</li>
 </ol>
-</section>
+</div>
+</li>
 
-<section id="cara">
-<h3>Cara memasak :</h3>
+<li>
+<div class="collapsible-header"><i class="material-icons">search</i>Cara Memasak</div>
+<div class="collapsible-body">
 <ol>
 <li> Tumis bumbu hingga matang.</li>
 <li> Tambahkan bakso, ceker, kerupuk yg sudah di rendam, garam, gula, lada, saus tiram, kaldu bubuk. Masak sebentar.</li>
 <li> Tambah air kaldu, masak hingga mendidih.</li>
 <li> Masukkan daun sawi, daun bawang, dan cabe rawit iris, masak hingga sayuran matang.</li>
 </ol>
-</section>
-
-<nav class="navigasi">
-  <ul>
-  <li><a href="#top">Kembali Ke Atas</a></li>
+</div>
+</li>
 </ul>
+</div>
+
+<nav class="bluechef">
+  <div class="nav-wrapper container" role="navigation">
+    <a href = "index.html">&lt;&lt;Kembali ke halaman utama</a>
+    <a href = "papedatelorayam.html">&lt;Back</a>
+  <a href="#top">|Kembali Ke Atas|</a>
+  <a href = "satelilitayamkhasbali.html">Next&gt;&gt;</a>
+</div>
 </nav>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
   </body>
 </html>
