--- a/latihan5/tentangstmikkharisma.html
+++ b/latihan5/tentangstmikkharisma.html
@@ -2,8 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
     <link rel="stylesheet" href="css/style.css">
+    <title>TENTANG STMIK KHARISMA</title>
   </head>
   <body>
     <h1>STMIK KHARISMA MAKASSAR </h1>
