--- a/latihan5/tujuanweb.html
+++ b/latihan5/tujuanweb.html
@@ -2,25 +2,26 @@
 <html lang="en" dir="ltr">
   <head id="wal">
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+rel="stylesheet">
     <title>tujuanweb</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Tujuan Web</h1>
     <nav class="navigasi">
       <ul>
-      <li><a href="index.html">Home</a></li>
-    </ul>
-  </nav>
-  <hr>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </nav>
+    <h1>Tujuan Web</h1>
     <p> Tujuan web ini saya buat untuk memenuhi tugas mata kuliah  Desain Web dan Praktikum Desain Web,
       juga untuk mengasah kemampuan mendesain sebuah web menjadi cantik serta saya akan memakai web Sepuluh Kuliner Tradional ini kalau jadi
      untuk memakainya disubmission atau final kelas belajar dasar web dicoding dan mendapat sertifikat.</p>
 
     <h2 class="heading gradient">Biodata Pembuat Web</h2>
-    <hr>
     <p>Ingin Tau Siapa Pembuat Web Sepuluh Kuliner Tradisional
     Berikut Biodata Pembuat Web Ini Klik=><a href="biodata.html">Biodata</a></p>
   </body>
