latihan5/index.html

--- a/latihan5/bahan/telur.html
+++ b/latihan5/bahan/telur.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head id="bg">
+  <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/materialize.min.css" media="screen, projection">
     <link rel="stylesheet" href="../css/style.css" media="screen,projection">
@@ -14,14 +14,14 @@
         <a href="#" class="brand-logo">MASTER CHEF</a>
         <ul class="right hide-on-med-and-down">
           <li><a href="../index.html">Beranda</a></li>
-          <li><a href="tujuanweb.html">Tentang Website</a></li>
-          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+          <li><a href="../tujuanweb.html">Tentang Website</a></li>
+          <li><a href="../tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
       <li><a href="../index.html">Beranda</a></li>
-      <li><a href="tujuanweb.html">Tentang Website</a></li>
-      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      <li><a href="../tujuanweb.html">Tentang Website</a></li>
+      <li><a href="../tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -44,7 +44,7 @@
       </div>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script type="text/javascript" src="js/init.js"></script>
+      <script type="text/javascript" src="../js/materialize.min.js"></script>
+      <script type="text/javascript" src="../js/init.js"></script>
   </body>
 </html>
