--- a/latihan5/pallubasa.html
+++ b/latihan5/pallubasa.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
       <link rel="stylesheet" href="css/style.css" media="screen,projection">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
       <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title> Pallubasa</title>
 </head>
@@ -22,7 +22,7 @@
           <li><a href="tujuanweb.html">Tentang Website</a></li>
             <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
           </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"<i class="material-icons">menu</i></a>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
     </nav>
 
@@ -133,7 +133,7 @@ Yang membedakan Pallubasa dengan Coto Makassar adalah bumbunya yang diracik khus
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
-</div>
+
 
 </body>
 </html>
