--- a/latihan5/biodata.html
+++ b/latihan5/biodata.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="container">
-    <h1>BIODATA</h1>
+    <h1 class="red-text">BIODATA</h1>
     <img src="img/img1.jpeg" height= "300px">
       <table>
         <tr>
