--- a/latihan5/index.html
+++ b/latihan5/index.html
@@ -55,9 +55,7 @@ rel="stylesheet">
 </div>
 </div>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-
-2.1.1.min.js"></script>
-
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
   </body>
