--- a/latihan5/tentangstmikkharisma.html
+++ b/latihan5/tentangstmikkharisma.html
@@ -2,28 +2,41 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport" content="width=device-width, initial scale= 1.0"/>
     <title>TENTANG STMIK KHARISMA</title>
   </head>
   <body>
-    <h1>STMIK KHARISMA MAKASSAR </h1>
-    <nav class="navigasi">
-      <ul>
-        <li><a href="index.html">HOME</a></li>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
         </ul>
-        </nav>
 
-        <div class="all">
+        <ul id="nav-mobile" class="sidenav">
+      <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+      class="material-icons">menu</i></a>
+    </div>
+    </nav>
+
+    <div class="container">
+    <h1 class="red-text">STMIK KHARISMA MAKASSAR </h1>
         <img src="img/kampus.jpg">
     <p>Sekolah Tinggi Manajemen Informatika dan Komputer (STMIK) Kharisma Makassar adalah perguruan tinggi
      bidang informatika dan komputer yang berdiri di Makassar pada 29 Maret 2000 yang ditandai dengan terbitnya
       Surat Keputusan Dirjen Pendidikan Tinggi Departemen Pendidikan Nasional nomor 33/D/O/2000 tanggal 29 Maret 2000.
       STMIK Kharisma Makassar hingga saat ini telah menghasilkan lebih dari 1000 alumni yang sebagian besar telah
       terserap sebagai tenaga kerja di berbagai bidang.</p>
-    </div>
+
 
 
     <img class="blockmenu" src="img/logo.jpg" width="200px">
@@ -43,9 +56,11 @@ rel="stylesheet">
           <td>Afiliasi:	Yayasan Pendidikan KHARISMA Makassar</td>
         </tr>
       </table>
+</div>
 
-
-
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
 
   </body>
 </html>
