--- a/latihan5/tujuanweb.html
+++ b/latihan5/tujuanweb.html
@@ -2,27 +2,45 @@
 <html lang="en" dir="ltr">
   <head id="wal">
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css" media="screen,projection">
+    <meta name="viewport" content="width=device-width, initial scale= 1.0"/>
     <title>tujuanweb</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Big+Shoulders+Stencil+Text:wght@500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
-    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <nav class="navigasi">
-      <ul>
-        <li><a href="index.html">Home</a></li>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">MASTER CHEF</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Beranda</a></li>
+          <li><a href="tujuanweb.html">Tentang Website</a></li>
+          <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="sidenav">
+      <li><a href="index.html">Beranda</a></li>
+      <li><a href="tujuanweb.html">Tentang Website</a></li>
+      <li><a href="tentangstmikkharisma.html">Tentang STMIK KHARISMA</a></li>
       </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
     </nav>
-    <h1>Tujuan Web</h1>
+
+    <div class="container">
+    <h1 class="red-text">Tujuan Web</h1>
     <p> Tujuan web ini saya buat untuk memenuhi tugas mata kuliah  Desain Web dan Praktikum Desain Web,
       juga untuk mengasah kemampuan mendesain sebuah web menjadi cantik serta saya akan memakai web Sepuluh Kuliner Tradional ini kalau jadi
      untuk memakainya disubmission atau final kelas belajar dasar web dicoding dan mendapat sertifikat.</p>
 
-    <h2 class="heading gradient">Biodata Pembuat Web</h2>
+    <h2 class="red-text">Biodata Pembuat Web</h2>
     <p>Ingin Tau Siapa Pembuat Web Sepuluh Kuliner Tradisional
-    Berikut Biodata Pembuat Web Ini Klik=><a href="biodata.html">Biodata</a></p>
+    Berikut Biodata Pembuat Web Ini Klik=><a href="biodata.html"><u>Biodata</u></a></p>
+  </div>
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/init.js"></script>
+
   </body>
 </html>
